@@ -1,3 +1,8 @@
+2012-11-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* regcomp.c, regex.c, regex_internal.h, regexec.c: Sync
+	with GLIBC.  Why not.
+
 2012-01-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	Further cleanups of macros in awk.h
